--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^14.11.8",
     "clean-webpack-plugin": "^3.0.0",
     "colors": "^1.4.0",
+    "copy-webpack-plugin": "^6.2.1",
     "file-loader": "^6.1.1",
     "nodemon": "^2.0.4",
     "ts-loader": "^8.0.4",
